tdf#117015 EMF+ Fix for displaying EMF+ files where GetDC is used

With EMF+ Only mode, still the EMF records could be used for
displaying objects, by using Get Device Context (GetDC).
Files identified as EMF+ Only can contain both EMF+ records and EMF records. All EMF+
records are used to render the image. The EMF records that are part of the drawing are those
preceded by a Get Device Context record.

Unfortunately after finishing EMF drawing, the clip region was
not reset. As a result records after EMF record was not displayed.

With this patch, the issue was fixed by resetting clip region.

Change-Id: I998b14e7c3b56a7711ba6a7bec08ec2097e0dfce